src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program_file
Rule 1     program_file -> program_file program_unit
Rule 2     program_file -> program_unit
Rule 3     program_unit -> main_program
Rule 4     program_unit -> function_def
Rule 5     program_unit -> subroutine_def
Rule 6     main_program -> PROGRAM ID declarations statements END
Rule 7     function_def -> type FUNCTION ID LPAREN param_list_opt RPAREN declarations statements END
Rule 8     subroutine_def -> SUBROUTINE ID LPAREN param_list_opt RPAREN declarations statements END
Rule 9     subroutine_def -> SUBROUTINE ID declarations statements END
Rule 10    param_list_opt -> param_list
Rule 11    param_list_opt -> empty
Rule 12    param_list -> param_list COMMA ID
Rule 13    param_list -> ID
Rule 14    declarations -> declarations declaration
Rule 15    declarations -> empty
Rule 16    declaration -> type id_decl_list
Rule 17    type -> INTEGER
Rule 18    type -> REAL
Rule 19    type -> LOGICAL
Rule 20    type -> CHARACTER
Rule 21    type -> CHARACTER LPAREN INT_CONST RPAREN
Rule 22    type -> CHARACTER TIMES INT_CONST
Rule 23    id_decl_list -> id_decl_list COMMA id_decl
Rule 24    id_decl_list -> id_decl
Rule 25    id_decl -> ID
Rule 26    id_decl -> ID LPAREN INT_CONST RPAREN
Rule 27    id_decl -> ID LPAREN ID RPAREN
Rule 28    statements -> statements labeled_stmt
Rule 29    statements -> empty
Rule 30    labeled_stmt -> INT_CONST statement
Rule 31    labeled_stmt -> statement
Rule 32    statement -> assign_stmt
Rule 33    statement -> if_stmt
Rule 34    statement -> do_stmt
Rule 35    statement -> goto_stmt
Rule 36    statement -> continue_stmt
Rule 37    statement -> print_stmt
Rule 38    statement -> read_stmt
Rule 39    statement -> call_stmt
Rule 40    statement -> return_stmt
Rule 41    assign_stmt -> ID EQUALS expr
Rule 42    assign_stmt -> ID LPAREN expr RPAREN EQUALS expr
Rule 43    if_stmt -> IF LPAREN expr RPAREN THEN statements ENDIF
Rule 44    if_stmt -> IF LPAREN expr RPAREN THEN statements ELSE statements ENDIF
Rule 45    if_stmt -> IF LPAREN expr RPAREN statement
Rule 46    do_stmt -> DO INT_CONST ID EQUALS expr COMMA expr do_body do_end
Rule 47    do_stmt -> DO INT_CONST ID EQUALS expr COMMA expr COMMA expr do_body do_end
Rule 48    do_body -> do_body statement
Rule 49    do_body -> empty
Rule 50    do_end -> INT_CONST CONTINUE
Rule 51    goto_stmt -> GOTO INT_CONST
Rule 52    continue_stmt -> CONTINUE
Rule 53    print_stmt -> PRINT TIMES COMMA expr_list
Rule 54    read_stmt -> READ TIMES COMMA read_list
Rule 55    read_list -> read_list COMMA read_item
Rule 56    read_list -> read_item
Rule 57    read_item -> ID
Rule 58    read_item -> ID LPAREN expr RPAREN
Rule 59    call_stmt -> CALL ID
Rule 60    call_stmt -> CALL ID LPAREN expr_list RPAREN
Rule 61    return_stmt -> RETURN
Rule 62    expr_list -> expr_list COMMA expr
Rule 63    expr_list -> expr
Rule 64    expr -> expr OR expr
Rule 65    expr -> expr AND expr
Rule 66    expr -> NOT expr
Rule 67    expr -> expr EQ expr
Rule 68    expr -> expr NE expr
Rule 69    expr -> expr LT expr
Rule 70    expr -> expr LE expr
Rule 71    expr -> expr GT expr
Rule 72    expr -> expr GE expr
Rule 73    expr -> expr PLUS expr
Rule 74    expr -> expr MINUS expr
Rule 75    expr -> expr TIMES expr
Rule 76    expr -> expr DIVIDE expr
Rule 77    expr -> MINUS expr
Rule 78    expr -> LPAREN expr RPAREN
Rule 79    expr -> ID LPAREN expr_list RPAREN
Rule 80    expr -> ID
Rule 81    expr -> INT_CONST
Rule 82    expr -> REAL_CONST
Rule 83    expr -> STRING
Rule 84    expr -> TRUE
Rule 85    expr -> FALSE
Rule 86    empty -> <empty>

Terminals, with rules where they appear

AND                  : 65
CALL                 : 59 60
CHARACTER            : 20 21 22
COMMA                : 12 23 46 47 47 53 54 55 62
CONTINUE             : 50 52
DIVIDE               : 76
DO                   : 46 47
ELSE                 : 44
END                  : 6 7 8 9
ENDIF                : 43 44
EQ                   : 67
EQUALS               : 41 42 46 47
FALSE                : 85
FUNCTION             : 7
GE                   : 72
GOTO                 : 51
GT                   : 71
ID                   : 6 7 8 9 12 13 25 26 27 27 41 42 46 47 57 58 59 60 79 80
IF                   : 43 44 45
INTEGER              : 17
INT_CONST            : 21 22 26 30 46 47 50 51 81
LE                   : 70
LOGICAL              : 19
LPAREN               : 7 8 21 26 27 42 43 44 45 58 60 78 79
LT                   : 69
MINUS                : 74 77
NE                   : 68
NOT                  : 66
OR                   : 64
PLUS                 : 73
PRINT                : 53
PROGRAM              : 6
READ                 : 54
REAL                 : 18
REAL_CONST           : 82
RETURN               : 61
RPAREN               : 7 8 21 26 27 42 43 44 45 58 60 78 79
STRING               : 83
SUBROUTINE           : 8 9
THEN                 : 43 44
TIMES                : 22 53 54 75
TRUE                 : 84
error                : 

Nonterminals, with rules where they appear

assign_stmt          : 32
call_stmt            : 39
continue_stmt        : 36
declaration          : 14
declarations         : 6 7 8 9 14
do_body              : 46 47 48
do_end               : 46 47
do_stmt              : 34
empty                : 11 15 29 49
expr                 : 41 42 42 43 44 45 46 46 47 47 47 58 62 63 64 64 65 65 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 78
expr_list            : 53 60 62 79
function_def         : 4
goto_stmt            : 35
id_decl              : 23 24
id_decl_list         : 16 23
if_stmt              : 33
labeled_stmt         : 28
main_program         : 3
param_list           : 10 12
param_list_opt       : 7 8
print_stmt           : 37
program_file         : 1 0
program_unit         : 1 2
read_item            : 55 56
read_list            : 54 55
read_stmt            : 38
return_stmt          : 40
statement            : 30 31 45 48
statements           : 6 7 8 9 28 43 44 44
subroutine_def       : 5
type                 : 7 16

Parsing method: LALR

state 0

    (0) S' -> . program_file
    (1) program_file -> . program_file program_unit
    (2) program_file -> . program_unit
    (3) program_unit -> . main_program
    (4) program_unit -> . function_def
    (5) program_unit -> . subroutine_def
    (6) main_program -> . PROGRAM ID declarations statements END
    (7) function_def -> . type FUNCTION ID LPAREN param_list_opt RPAREN declarations statements END
    (8) subroutine_def -> . SUBROUTINE ID LPAREN param_list_opt RPAREN declarations statements END
    (9) subroutine_def -> . SUBROUTINE ID declarations statements END
    (17) type -> . INTEGER
    (18) type -> . REAL
    (19) type -> . LOGICAL
    (20) type -> . CHARACTER
    (21) type -> . CHARACTER LPAREN INT_CONST RPAREN
    (22) type -> . CHARACTER TIMES INT_CONST

    PROGRAM         shift and go to state 6
    SUBROUTINE      shift and go to state 8
    INTEGER         shift and go to state 9
    REAL            shift and go to state 10
    LOGICAL         shift and go to state 11
    CHARACTER       shift and go to state 12

    program_file                   shift and go to state 1
    program_unit                   shift and go to state 2
    main_program                   shift and go to state 3
    function_def                   shift and go to state 4
    subroutine_def                 shift and go to state 5
    type                           shift and go to state 7

state 1

    (0) S' -> program_file .
    (1) program_file -> program_file . program_unit
    (3) program_unit -> . main_program
    (4) program_unit -> . function_def
    (5) program_unit -> . subroutine_def
    (6) main_program -> . PROGRAM ID declarations statements END
    (7) function_def -> . type FUNCTION ID LPAREN param_list_opt RPAREN declarations statements END
    (8) subroutine_def -> . SUBROUTINE ID LPAREN param_list_opt RPAREN declarations statements END
    (9) subroutine_def -> . SUBROUTINE ID declarations statements END
    (17) type -> . INTEGER
    (18) type -> . REAL
    (19) type -> . LOGICAL
    (20) type -> . CHARACTER
    (21) type -> . CHARACTER LPAREN INT_CONST RPAREN
    (22) type -> . CHARACTER TIMES INT_CONST

    PROGRAM         shift and go to state 6
    SUBROUTINE      shift and go to state 8
    INTEGER         shift and go to state 9
    REAL            shift and go to state 10
    LOGICAL         shift and go to state 11
    CHARACTER       shift and go to state 12

    program_unit                   shift and go to state 13
    main_program                   shift and go to state 3
    function_def                   shift and go to state 4
    subroutine_def                 shift and go to state 5
    type                           shift and go to state 7

state 2

    (2) program_file -> program_unit .

    PROGRAM         reduce using rule 2 (program_file -> program_unit .)
    SUBROUTINE      reduce using rule 2 (program_file -> program_unit .)
    INTEGER         reduce using rule 2 (program_file -> program_unit .)
    REAL            reduce using rule 2 (program_file -> program_unit .)
    LOGICAL         reduce using rule 2 (program_file -> program_unit .)
    CHARACTER       reduce using rule 2 (program_file -> program_unit .)
    $end            reduce using rule 2 (program_file -> program_unit .)


state 3

    (3) program_unit -> main_program .

    PROGRAM         reduce using rule 3 (program_unit -> main_program .)
    SUBROUTINE      reduce using rule 3 (program_unit -> main_program .)
    INTEGER         reduce using rule 3 (program_unit -> main_program .)
    REAL            reduce using rule 3 (program_unit -> main_program .)
    LOGICAL         reduce using rule 3 (program_unit -> main_program .)
    CHARACTER       reduce using rule 3 (program_unit -> main_program .)
    $end            reduce using rule 3 (program_unit -> main_program .)


state 4

    (4) program_unit -> function_def .

    PROGRAM         reduce using rule 4 (program_unit -> function_def .)
    SUBROUTINE      reduce using rule 4 (program_unit -> function_def .)
    INTEGER         reduce using rule 4 (program_unit -> function_def .)
    REAL            reduce using rule 4 (program_unit -> function_def .)
    LOGICAL         reduce using rule 4 (program_unit -> function_def .)
    CHARACTER       reduce using rule 4 (program_unit -> function_def .)
    $end            reduce using rule 4 (program_unit -> function_def .)


state 5

    (5) program_unit -> subroutine_def .

    PROGRAM         reduce using rule 5 (program_unit -> subroutine_def .)
    SUBROUTINE      reduce using rule 5 (program_unit -> subroutine_def .)
    INTEGER         reduce using rule 5 (program_unit -> subroutine_def .)
    REAL            reduce using rule 5 (program_unit -> subroutine_def .)
    LOGICAL         reduce using rule 5 (program_unit -> subroutine_def .)
    CHARACTER       reduce using rule 5 (program_unit -> subroutine_def .)
    $end            reduce using rule 5 (program_unit -> subroutine_def .)


state 6

    (6) main_program -> PROGRAM . ID declarations statements END

    ID              shift and go to state 14


state 7

    (7) function_def -> type . FUNCTION ID LPAREN param_list_opt RPAREN declarations statements END

    FUNCTION        shift and go to state 15


state 8

    (8) subroutine_def -> SUBROUTINE . ID LPAREN param_list_opt RPAREN declarations statements END
    (9) subroutine_def -> SUBROUTINE . ID declarations statements END

    ID              shift and go to state 16


state 9

    (17) type -> INTEGER .

    FUNCTION        reduce using rule 17 (type -> INTEGER .)
    ID              reduce using rule 17 (type -> INTEGER .)


state 10

    (18) type -> REAL .

    FUNCTION        reduce using rule 18 (type -> REAL .)
    ID              reduce using rule 18 (type -> REAL .)


state 11

    (19) type -> LOGICAL .

    FUNCTION        reduce using rule 19 (type -> LOGICAL .)
    ID              reduce using rule 19 (type -> LOGICAL .)


state 12

    (20) type -> CHARACTER .
    (21) type -> CHARACTER . LPAREN INT_CONST RPAREN
    (22) type -> CHARACTER . TIMES INT_CONST

    FUNCTION        reduce using rule 20 (type -> CHARACTER .)
    ID              reduce using rule 20 (type -> CHARACTER .)
    LPAREN          shift and go to state 17
    TIMES           shift and go to state 18


state 13

    (1) program_file -> program_file program_unit .

    PROGRAM         reduce using rule 1 (program_file -> program_file program_unit .)
    SUBROUTINE      reduce using rule 1 (program_file -> program_file program_unit .)
    INTEGER         reduce using rule 1 (program_file -> program_file program_unit .)
    REAL            reduce using rule 1 (program_file -> program_file program_unit .)
    LOGICAL         reduce using rule 1 (program_file -> program_file program_unit .)
    CHARACTER       reduce using rule 1 (program_file -> program_file program_unit .)
    $end            reduce using rule 1 (program_file -> program_file program_unit .)


state 14

    (6) main_program -> PROGRAM ID . declarations statements END
    (14) declarations -> . declarations declaration
    (15) declarations -> . empty
    (86) empty -> .

    INTEGER         reduce using rule 86 (empty -> .)
    REAL            reduce using rule 86 (empty -> .)
    LOGICAL         reduce using rule 86 (empty -> .)
    CHARACTER       reduce using rule 86 (empty -> .)
    END             reduce using rule 86 (empty -> .)
    INT_CONST       reduce using rule 86 (empty -> .)
    ID              reduce using rule 86 (empty -> .)
    IF              reduce using rule 86 (empty -> .)
    DO              reduce using rule 86 (empty -> .)
    GOTO            reduce using rule 86 (empty -> .)
    CONTINUE        reduce using rule 86 (empty -> .)
    PRINT           reduce using rule 86 (empty -> .)
    READ            reduce using rule 86 (empty -> .)
    CALL            reduce using rule 86 (empty -> .)
    RETURN          reduce using rule 86 (empty -> .)

    declarations                   shift and go to state 19
    empty                          shift and go to state 20

state 15

    (7) function_def -> type FUNCTION . ID LPAREN param_list_opt RPAREN declarations statements END

    ID              shift and go to state 21


state 16

    (8) subroutine_def -> SUBROUTINE ID . LPAREN param_list_opt RPAREN declarations statements END
    (9) subroutine_def -> SUBROUTINE ID . declarations statements END
    (14) declarations -> . declarations declaration
    (15) declarations -> . empty
    (86) empty -> .

    LPAREN          shift and go to state 22
    INTEGER         reduce using rule 86 (empty -> .)
    REAL            reduce using rule 86 (empty -> .)
    LOGICAL         reduce using rule 86 (empty -> .)
    CHARACTER       reduce using rule 86 (empty -> .)
    END             reduce using rule 86 (empty -> .)
    INT_CONST       reduce using rule 86 (empty -> .)
    ID              reduce using rule 86 (empty -> .)
    IF              reduce using rule 86 (empty -> .)
    DO              reduce using rule 86 (empty -> .)
    GOTO            reduce using rule 86 (empty -> .)
    CONTINUE        reduce using rule 86 (empty -> .)
    PRINT           reduce using rule 86 (empty -> .)
    READ            reduce using rule 86 (empty -> .)
    CALL            reduce using rule 86 (empty -> .)
    RETURN          reduce using rule 86 (empty -> .)

    declarations                   shift and go to state 23
    empty                          shift and go to state 20

state 17

    (21) type -> CHARACTER LPAREN . INT_CONST RPAREN

    INT_CONST       shift and go to state 24


state 18

    (22) type -> CHARACTER TIMES . INT_CONST

    INT_CONST       shift and go to state 25


state 19

    (6) main_program -> PROGRAM ID declarations . statements END
    (14) declarations -> declarations . declaration
    (28) statements -> . statements labeled_stmt
    (29) statements -> . empty
    (16) declaration -> . type id_decl_list
    (86) empty -> .
    (17) type -> . INTEGER
    (18) type -> . REAL
    (19) type -> . LOGICAL
    (20) type -> . CHARACTER
    (21) type -> . CHARACTER LPAREN INT_CONST RPAREN
    (22) type -> . CHARACTER TIMES INT_CONST

    END             reduce using rule 86 (empty -> .)
    INT_CONST       reduce using rule 86 (empty -> .)
    ID              reduce using rule 86 (empty -> .)
    IF              reduce using rule 86 (empty -> .)
    DO              reduce using rule 86 (empty -> .)
    GOTO            reduce using rule 86 (empty -> .)
    CONTINUE        reduce using rule 86 (empty -> .)
    PRINT           reduce using rule 86 (empty -> .)
    READ            reduce using rule 86 (empty -> .)
    CALL            reduce using rule 86 (empty -> .)
    RETURN          reduce using rule 86 (empty -> .)
    INTEGER         shift and go to state 9
    REAL            shift and go to state 10
    LOGICAL         shift and go to state 11
    CHARACTER       shift and go to state 12

    statements                     shift and go to state 26
    declaration                    shift and go to state 27
    empty                          shift and go to state 28
    type                           shift and go to state 29

state 20

    (15) declarations -> empty .

    INTEGER         reduce using rule 15 (declarations -> empty .)
    REAL            reduce using rule 15 (declarations -> empty .)
    LOGICAL         reduce using rule 15 (declarations -> empty .)
    CHARACTER       reduce using rule 15 (declarations -> empty .)
    END             reduce using rule 15 (declarations -> empty .)
    INT_CONST       reduce using rule 15 (declarations -> empty .)
    ID              reduce using rule 15 (declarations -> empty .)
    IF              reduce using rule 15 (declarations -> empty .)
    DO              reduce using rule 15 (declarations -> empty .)
    GOTO            reduce using rule 15 (declarations -> empty .)
    CONTINUE        reduce using rule 15 (declarations -> empty .)
    PRINT           reduce using rule 15 (declarations -> empty .)
    READ            reduce using rule 15 (declarations -> empty .)
    CALL            reduce using rule 15 (declarations -> empty .)
    RETURN          reduce using rule 15 (declarations -> empty .)


state 21

    (7) function_def -> type FUNCTION ID . LPAREN param_list_opt RPAREN declarations statements END

    LPAREN          shift and go to state 30


state 22

    (8) subroutine_def -> SUBROUTINE ID LPAREN . param_list_opt RPAREN declarations statements END
    (10) param_list_opt -> . param_list
    (11) param_list_opt -> . empty
    (12) param_list -> . param_list COMMA ID
    (13) param_list -> . ID
    (86) empty -> .

    ID              shift and go to state 31
    RPAREN          reduce using rule 86 (empty -> .)

    param_list_opt                 shift and go to state 32
    param_list                     shift and go to state 33
    empty                          shift and go to state 34

state 23

    (9) subroutine_def -> SUBROUTINE ID declarations . statements END
    (14) declarations -> declarations . declaration
    (28) statements -> . statements labeled_stmt
    (29) statements -> . empty
    (16) declaration -> . type id_decl_list
    (86) empty -> .
    (17) type -> . INTEGER
    (18) type -> . REAL
    (19) type -> . LOGICAL
    (20) type -> . CHARACTER
    (21) type -> . CHARACTER LPAREN INT_CONST RPAREN
    (22) type -> . CHARACTER TIMES INT_CONST
